@@ -2,6 +2,10 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
+- 19/06/2007, version 1.06 (1.06, 1.0.7, 1.0.7, 1.0.3): roms
+	- followed API changes in ticalcs2 library
+	- fixed potential bug in action box (var existence checking)
+
 - 10/06/2007, version 1.05 (1.0.5, 1.0.6, 1.0.6, 1.0.3): roms
 	- sending of APPV variables in FLASH is not allowed; avoid this.
 	- skip sending of IDlist.8xidl (pseudo-variable)
